Move the blink ip address function to a separate linux service

--- a/src/main/webapp/template/main.xhtml
+++ b/src/main/webapp/template/main.xhtml
@@ -27,6 +27,7 @@
 
    	    <div id="footer">
    	    	<ui:insert name="footer" >
+                <rich:messages />
    	    	</ui:insert>
    	    </div>
 
